# plus-panel

./: .gitignore  Makefile.am  README.md  autogen.sh  build_package.sh  configure.ac  enable_pluspanel.sh  generate_pot.sh
debian/: changelog  control  copyright  postinst  postrm  rules
lib/: Makefile.am
lib/appsmenu/: Makefile.am  appsmenu.js
lib/mmod/: Makefile.am  favorites.js  position.js
lib/nohotcorner/: Makefile.am  nohotcorner.js
locale/: Makefile.am  messages.pot
locale/fr/: Makefile.am
locale/fr/LC_MESSAGES/: Makefile.am  fr_CA.po  plus-panel.mo
src/: Makefile.am  extension.js  metadata.json  stylesheet.css
