dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(pluspanel, 1.0)

AC_CONFIG_HEADERS([config.h])

AC_PREFIX_DEFAULT(~/.local/share/gnome-shell/extensions)

AM_INIT_AUTOMAKE([1.11 foreign])

AM_SILENT_RULES([yes])

LT_INIT

AM_GNU_GETTEXT([external])

AC_OUTPUT([
Makefile
src/Makefile
locale/Makefile
locale/fr/Makefile
locale/fr/LC_MESSAGES/Makefile
lib/Makefile
lib/appsmenu/Makefile
lib/mmod/Makefile
lib/nohotcorner/Makefile
])
