## Process this file with automake to produce Makefile.in

## Created by Anjuta

jsdir = $(prefix)/plus-panel@plus-us.gel.usherbrooke.ca/lib/mmod

js_DATA = \
	activities.js \
	aggregate.js \
	behavior.js \
	date.js \
	favorites.js \
	position.js \
	settings.js


EXTRA_DIST = $(js_DATA)

uninstall-local:
	-rm -r $(jsdir)

